tests/rt/neg/ifc/lclear-taint2.trp
let val main = self () 
    fun f1 () = send (main, 1); send (main, 2)
    val _ = spawn (f1)
    val c = raisembox {alice}
    val p = pinipush (authority)
    val _ = debugpc()
    val u = rcv ({}, {alice}, [hn _ => 42]) 
    val _ = pinipop (p)
    val _ = debugpc ()
    val v = rcv ({}, {}, [hn x => x ])
in adv v
end